# TD1

./: .gitignore
TD1/src/: main.cpp
TD2/: CMakeLists.txt
TD2/src/: exo.txt  main.cpp  tri.cpp  tri.hpp
TD3/: CMakeLists.txt
TD3/src/: exo1.cpp  exo2.cpp  tri.hpp
TD4/: CMakeLists.txt
TD4/src/: exo2.cpp
TD5/: CMakeLists.txt
TD5/src/: exo1.cpp  exo2.cpp  exo3.cpp
TD6/: CMakeLists.txt
TD6/src/: exo1.cpp  main.cpp  node.cpp  node.hpp
TD7/src/: exo3.txt  graph.cpp  graph.hpp  main.cpp
TD8/: CMakeLists.txt
TD8/src/: exo1.cpp  exo2.cpp  exo3.cpp
src/: fraction.cpp  fraction.hpp  main.cpp
