cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_STANDARD 17)

project(TD2)

# On indique que l'on veut créer un exécutable "ex01" du TD3 compilé à partir du fichier td0_ex01.cpp
add_executable(ex01TD2 src/td02_ex01.cpp)

# add_executable(ex02TD2 src/td02_ex02.cpp)

# add_executable(ex03TD2 src/td02_ex03.cpp)

# add_executable(ex04TD2 src/td02_ex04.cpp)

# add_executable(ex05TD2 src/td02_ex05.cpp)

# add_executable(ex06TD2 src/td02_ex06.cpp)